[tool.poetry]
name = "scaffold_for_python"
version = "0.1.0"
description = ""
authors = ["hshmtkzhr <hshmtkzhr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uroboros = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
